# S3CAMR

./: .dockerignore  .gitignore  Dockerfile  Makefile  NOTES  README.md  abstract.tex  bmc.tex  conclusion.tex  generic_macros.tex  implementation.tex  intro.tex  main.tex  prelims.tex  pwa_rel.tex  references.bib  refs.bib  requirements.txt  scamr.tex  sig-alternate-05-2015.cls  specific_macros.tex  thesis.tex
bmc/: dump_sal.py  saltrans.py
examples/: README.md
examples/bball/: bball.py  bball.tst  bball_2dim.py  bball_2dim.tst  bball_s3cam.tst  bball_s3camr.tst
examples/bball_sin/: bball_sin.py  bball_sin.tst  bball_sin1_ass.py  bball_sin1_ass.tst  bball_sin1_pdst.py  bball_sin1_pdst.tst  bball_sin2.py  bball_sin2.tst
examples/bicycle_cora/: bicycle.py  bicycle_s3camr.tst  u.mat
examples/brusselator/: brusselator.py  brusselator.tst
examples/dc_motor/: dc_motor.py  dci.tst
matlab_proto/: Cube.m  FileNames.m  Grid.m  GridAbstraction.m  Model.m  Q.m  RelAbs.m  S.m  UQ.m  US.m  abs2concrete_path.m  cube2poly.m  dump_model.m  eq2ineq.m  falsify.m  find_all_cell_paths_thresh.m  find_all_paths.m  find_all_paths_gen.m  find_all_paths_thresh.m  generate_data.m  get_vdp_model.m  mySign.m  my_figure.m  plot_cell.m  simulate_model.m  textprogressbar.m  vdp_model_data_x_1e6.mat  vdp_sim.m  violates.m
python_proto/: err.py  get_pwa_from_mat.py  pickled_model  pwa.py
rust/: Cargo.toml  pyproject.toml
rust/src/: dynamics.rs  integrate.rs  lib.rs
sal_bmc/: dump_sal.py  salbmc.py  saltrans.py
src/: bbal_parse.py  globalopts.py  plot_hack.py  scamr.py  settings.py
(+179 files in other folders)
